# Oopsilon-old

./: .gitignore  README.md  meson.build  settings.json
tools/: mkiso.sh
vmm/: meson.build
vmm/amd64/: kmain.c  limine.cfg  linker.ld  meson.build
vmm/interp/: driver.cc  driver.hh  meson.build  parser.yy  scanner.l
vmm/libcshim/: assert.h  errno.h  stdio.h  stdlib.h  string.h
vmm/native/: klib.c  klib.h  liballoc.c  liballoc_sysdep.c  meson.build  nanoprintf.h
